name:                  ambiata-x-vector
version:               0.0.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              ambiata-x-vector.
category:              Prelude
cabal-version:         >= 1.8
build-type:            Simple
description:           ambiata-x-vector.

library
  build-depends:
                       base                            >= 4.6        && < 5
                     , ambiata-p
                     , vector                          >= 0.10       && < 0.12

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       X.Data.Vector
                       X.Data.Vector.Generic
                       X.Data.Vector.Primitive
                       X.Data.Vector.Storable
                       X.Data.Vector.Unboxed

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:       base
                     , ambiata-disorder-core
                     , ambiata-p
                     , ambiata-x-vector
                     , QuickCheck                      == 2.8.*
                     , quickcheck-instances            == 0.3.*
                     , transformers                    >= 0.4        && < 0.6

benchmark bench
  type:                exitcode-stdio-1.0

  main-is:             bench.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       bench

  build-depends:       base
                     , ambiata-p
                     , ambiata-x-vector
                     , containers                      == 0.5.*
                     , criterion                       == 1.1.*
                     , deepseq                         >= 1.3 && < 1.5
                     , transformers                    >= 0.4        && < 0.6
