name:                  ambiata-x-vector
version:               0.0.1.1
license:               AllRightsReserved
author:                Ambiata <info@ambiata.com>
maintainer:            Ambiata <info@ambiata.com>
copyright:             (c) 2015 Ambiata.
synopsis:              ambiata-x-vector.
category:              Prelude
cabal-version:         >= 1.22
build-type:            Simple
description:           ambiata-x-vector.

library
  build-depends:
                       base                            >= 4.6        && < 5
                     , ambiata-p
                     , primitive                       >= 0.6        && < 0.7
                     , transformers-base               == 0.4.*
                     , vector                          >= 0.11       && < 0.13

  if impl(ghc < 8.0)
    build-depends:
                       semigroups                      >= 0.16       && < 0.19

  default-language:    Haskell2010
  
  ghc-options:
                       -Wall

  hs-source-dirs:
                       src


  exposed-modules:
                       X.Data.Vector
                       X.Data.Vector.Cons
                       X.Data.Vector.Generic
                       X.Data.Vector.Grow
                       X.Data.Vector.Primitive
                       X.Data.Vector.Ref
                       X.Data.Vector.Storable
                       X.Data.Vector.Unboxed

                       X.Data.Vector.Stream
                       X.Data.Vector.Stream.Conversion
                       X.Data.Vector.Stream.Enum
                       X.Data.Vector.Stream.Group
                       X.Data.Vector.Stream.Map
                       X.Data.Vector.Stream.Merge

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:       base
                     , ambiata-disorder-core
                     , ambiata-p
                     , ambiata-x-vector
                     , QuickCheck
                     , quickcheck-instances
                     , transformers

  default-language:    Haskell2010
  
benchmark bench
  type:                exitcode-stdio-1.0

  main-is:             bench.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       bench

  build-depends:       base
                     , ambiata-p
                     , ambiata-x-vector
                     , containers                      == 0.5.*
                     , criterion                       >= 1.1        && < 1.6
                     , deepseq                         >= 1.3        && < 1.5
                     , transformers                    >= 0.4        && < 0.6

  default-language:    Haskell2010
